# semi-senti

./: .env.example  .gitignore  README.md  collect_all_data.bat  db_seed.py  pyproject.toml  requirements.txt  run_linux.sh  run_windows.bat  setup.bat  setup.sh
.cursor/rules/: dev-workflow-docs-and-git.mdc  prompt-log-tracking.mdc  version-control-mandatory.mdc
docs/: PRD.md  RELEASE_NOTES.md  Tasks.md  UseCases.md
docs/handoff/: 2026-05-17-phase5-frontend-renewal.md
docs/prompt-logs/: 2026-05-09.md  2026-05-16.md  2026-05-17.md  2026-05-30.md
scripts/: seed_all_data.py  seed_demo_data.py  seed_stocks.py
src/semi_senti/: __init__.py  __main__.py  bootstrap.py  cli.py
src/semi_senti/admin/: __init__.py  monitoring.py  stock_admin.py
tests/integration/: test_phase1_1.py  test_phase2_1_lexicon.py
tests/unit/: test_admin.py  test_band_and_signal.py  test_cleaner.py  test_cycle.py  test_dart_collector.py  test_dart_corp.py  test_dashboard_chart.py  test_dashboard_components.py  test_dashboard_data_provider.py  test_db_control.py  test_db_schema.py  test_divergence.py  test_lexicon.py  test_news_collector.py  test_normalizer.py  test_notifier.py  test_package_smoke.py  test_price_collector.py  test_sentiment_engine.py  test_tokenizer.py
web/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/hooks/: index.ts  use-auto-refresh.ts  use-snapshot.ts  use-stocks.ts
web/lib/: classify-sentiment.ts  db.ts  snapshot.ts  types.ts  utils.ts
(+119 files in other folders)
