[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semi-senti"
version = "0.1.0"
description = "Semiconductor-focused sentiment and fundamental signal dashboard"
readme = "README.md"
# PRD §4.2 / Tasks T-001: Python 3.8 이상
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "pandas>=2.0.0,<2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
collector = [
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]
nlp = [
    "konlpy>=0.6.0",
    "JPype1>=1.5.0,<2.0.0",
]
dashboard = [
    "streamlit>=1.33.0",
    "streamlit-lightweight-charts>=0.7.0",
]
notifier = [
    "python-telegram-bot>=20.0,<21.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
semi-senti = "semi_senti.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
